fix issue with image not showing on ios devices

--- a/src/scss/custom/_hero.scss
+++ b/src/scss/custom/_hero.scss
@@ -1,10 +1,10 @@
 .hero {
   background-attachment: fixed;
-  background-image: url('https://res.cloudinary.com/paseo/image/upload/v1523886839/johan-martin/bali_countryside_iuuhtc.jpg');
+  background-image: url('http://res.cloudinary.com/paseo/image/upload/dpr_auto,q_auto/v1523887589/johan-martin/bali_countryside_iuuhtc.jpg');
   background-origin: padding-box;
-  background-position: center center;
+  // background-position: center center;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
 
   align-items: center;
   display: flex;
